--- a/src/pug/blocks/footer.pug
+++ b/src/pug/blocks/footer.pug
@@ -47,11 +47,12 @@ footer(class="block-footer")
 				div(class="footer-contacts-adress") о. Хайнань, г. Хайкоу
 				a(class="footer-contacts-mail" href="mailto:hainanlife@163.com") hainanlife@163.com
 			div(class="footer-social")
-				div(class="footer-social-item")
-				div(class="footer-social-item")
-				div(class="footer-social-item")
-				div(class="footer-social-item")
+				a(class="footer-social-item tw" href="#")
+				a(class="footer-social-item rss" href="#")
+				a(class="footer-social-item yt" href="#")
+				a(class="footer-social-item fb" href="#")
 			div(class="footer-description")
 				p
 					| Остров Хайнань называют «Восточными Гавайями», «Таиландом eв миниатюре». Но зачем клеить чужие ярлыки на то, что достойно своего собственного имени? Это прекрасное место представляет собой неповторимую палитру отдыха и развлечений, а также выбора программ образования и лечения.
-			a(class="footer-copyright" href="#") Под чуткой заботой SEMPROGROUP
+			a(class="footer-copyright" href="https://semprogroup.ru/")
+				span Под чуткой заботой SEMPROGROUP
