--- a/src/css/blocks/header.css
+++ b/src/css/blocks/header.css
@@ -7,6 +7,7 @@
 }
 
 .header-menu-toggle {
+
 	width: 15%;
 	min-width: 43px;
 	display: inline-block;
@@ -14,6 +15,16 @@
 	height: 54px;
 	background-color: #004c54;
 	border-right: 1px solid #459199;
+	cursor: pointer;
+}
+
+.header-menu-toggle::after {
+	content: '';
+	display: block;
+	width: 23px;
+	height: 16px;
+	margin: 20px auto;
+	background: url("../../images/sprite.png") -493px -5px no-repeat;
 }
 
 .header-logo-wrapper {
@@ -35,5 +46,14 @@
 	height: 54px;
 	background-color: #004c54;
 	border-left: 1px solid #459199;
+	cursor: pointer;
 }
 
+.header-sign::after {
+	content: '';
+	display: block;
+	width: 26px;
+	height: 26px;
+	margin: 14px auto;
+	background: url("../../images/sprite.png") -1035px -5px no-repeat;
+}
