--- a/src/pug/layout/layout.pug
+++ b/src/pug/layout/layout.pug
@@ -6,24 +6,24 @@ html(class='no-js' lang='ru')
 		meta(name='viewport' content='width=device-width,initial-scale=1')
 		meta(http-equiv='X-UA-Compatible' content='IE=edge')
 
-		link(href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&amp;subset=cyrillic' rel='stylesheet')
-		link(rel='shortcut icon' href='../favicon.png' type='image/x-icon')
-		link(rel='stylesheet' href='../css/normalize.css')
-		link(rel='stylesheet' href='../js/vendor/fancybox/jquery.fancybox.css')
-		link(rel='stylesheet' href='../css/fonts.css')
-		link(rel='stylesheet' href='../css/fonts.css')
+		link(href='https://fonts.googleapis.com/css?family=Open+Sans:300i,400,600,700&amp;subset=cyrillic' rel='stylesheet')
+		link(rel='shortcut icon' href='favicon.png' type='image/x-icon')
+		link(rel='stylesheet' href='css/normalize.css')
+		link(rel='stylesheet' href='js/vendor/fancybox/jquery.fancybox.css')
+		link(rel='stylesheet' href='css/fonts.css')
+		link(rel='stylesheet' href='css/fonts.css')
 		link(rel='stylesheet' href='css/slick.js/slick.css')
 		link(rel='stylesheet' href='css/slick.js/slick-theme.css')
-		link(rel='stylesheet' href='../css/css3.css')
+		link(rel='stylesheet' href='css/css3.css')
 		link(rel='stylesheet' href='css/main.css')
 
-		script(src='../js/vendor/modernizr-2.8.3.min.js')
-		script(src='../js/vendor/jquery-3.2.0.min.js')
-		script(src='../js/vendor/jquery-migrate-1.4.1.min.js')
-		script(src='../js/vendor/jquery.form.min.js')
-		script(src='../js/vendor/fancybox/jquery.fancybox.pack.js')
+		script(src='js/vendor/modernizr-2.8.3.min.js')
+		script(src='js/vendor/jquery-3.2.0.min.js')
+		script(src='js/vendor/jquery-migrate-1.4.1.min.js')
+		script(src='js/vendor/jquery.form.min.js')
+		script(src='js/vendor/fancybox/jquery.fancybox.pack.js')
 		script(src='js/vendor/slick.js/slick.min.js')
-		script(src='../js/main.js')
+		script(src='js/main.js')
 
 		title 
 			block title
