--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -108,23 +108,23 @@ block content
 						div(class="slider")
 							div(class="slide")
 								div(class="blogs-items")
-									a(class="blogs-item sec1" href="#")
+									div(class="blogs-item sec1")
 										div(class="blogs-wrapper")
 											div(class="blogs-name") 悦心 (Yue Xin) 
 											div(class="blogs-date") 30 Января 2017
 											div(class="blogs-foto")
-										div(class="blogs-content")
+										a(class="blogs-content" href="#")
 											div(class="blogs-img")
 												img(src="images/blogs-img.jpg" alt="Фото" width="290" height="136")
 											div(class="blogs-text")
 												div(class="blogs-title") Топ фильмов, снятых на Хайнане 
 												div(class="blogs-description") Что посмотреть, чтобы прочувствовать ритм Хайнаня. 
-									a(class="blogs-item sec2" href="#")
+									div(class="blogs-item sec2")
 										div(class="blogs-wrapper")
 											div(class="blogs-name") 悦心 (Yue Xin) 
 											div(class="blogs-date") 30 Января 2017
 											div(class="blogs-foto")
-										div(class="blogs-content")
+										a(class="blogs-content" href="#")
 											div(class="blogs-img")
 												img(src="images/blogs-img2.jpg" alt="Фото" width="290" height="136")
 											div(class="blogs-text")
