--- a/src/pug/layout/layout.pug
+++ b/src/pug/layout/layout.pug
@@ -12,6 +12,7 @@ html(class='no-js' lang='ru')
 		link(rel='stylesheet' href='js/vendor/fancybox/jquery.fancybox.css')
 		link(rel='stylesheet' href='css/fonts.css')
 		link(rel='stylesheet' href='css/fonts.css')
+		link(rel='stylesheet' href='css/jquery-ui/jquery-ui.min.css')
 		link(rel='stylesheet' href='css/slick.js/slick.css')
 		link(rel='stylesheet' href='css/slick.js/slick-theme.css')
 		link(rel='stylesheet' href='css/css3.css')
@@ -21,6 +22,7 @@ html(class='no-js' lang='ru')
 		script(src='js/vendor/jquery-3.2.0.min.js')
 		script(src='js/vendor/jquery-migrate-1.4.1.min.js')
 		script(src='js/vendor/jquery.form.min.js')
+		script(src='js/vendor/jquery-ui/jquery-ui.min.js')
 		script(src='js/vendor/fancybox/jquery.fancybox.pack.js')
 		script(src='js/vendor/slick.js/slick.min.js')
 		script(src='js/main.js')
