--- a/src/css/css3.css
+++ b/src/css/css3.css
@@ -41,6 +41,7 @@
 @import "blocks/datingMyPage.css";
 
 @import "blocks/forum.css";
+@import "blocks/profile.css";
 
 @import "blocks/newsBlog.css";
 @import "blocks/newsBlogFull.css";
