--- a/src/pug/blocks/footer.pug
+++ b/src/pug/blocks/footer.pug
@@ -3,8 +3,8 @@ footer(class="block-footer")
 		div(class="footer-menu-wrapper")
 			ul(class="footer-menu")
 				li(class="footer-menu-item")
-					div(class="item-title active") О хайнане
-					ul(class="submenu")
+					div(class="item-title toggle toggle-js") О хайнане
+					ul(class="submenu footer-submenu-js")
 						li(class="submenu-item")
 							a(class="submenu-title" href="#") Карта Хайнаня
 						li(class="submenu-item")
