--- a/src/pug/pages/newsBlogFull.pug
+++ b/src/pug/pages/newsBlogFull.pug
@@ -84,10 +84,7 @@ block content
 				div(class="newsBlogFull-comments")
 					h3(class="title") Оставить комментарий:
 					div(class="text")
-						p
-							| Для того, чтобы добавить новый комментарий необходимо 
-							a(href="#") авторизоваться 
-							| на сайте.
+						p Для того, чтобы добавить новый комментарий необходимо #[a(href="#") авторизоваться] на сайте.
 
 
 			include ../blocks/events
